# skalacoin

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/: balance_sheet.h  constants.h  dynarr.h  dynset.h  numgen.h  packettype.h  txmempool.h  uint256.h  utils.h
include/autolykos2/: autolykos2.h
include/blake2/: blake2.h
include/block/: block.h  chain.h  transaction.h
include/crypto/: crypto.h
include/nets/: net_node.h
include/randomx/: librx_wrapper.h
include/storage/: block_table.h
include/tcpd/: tcpclient.h  tcpconnection.h  tcpserver.h
src/: balance_sheet.c  dynarr.c  dynset.c  main.c  numgen.c  txmempool.c
src/autolykos2/: autolykos2.c  autolykos2_ref_wrapper.cpp
src/blake2/: blake2.c
src/block/: block.c  chain.c  transaction.c
src/crypto/: crypto.c
src/nets/: net_node.c
src/randomx/: librx_wrapper.c
src/tcpd/: tcpclient.c  tcpconnection.c  tcpserver.c
